@@ -4,7 +4,7 @@ function CameraTowerBuilding(pos_x, pos_y, player)
 	this.player = player;
 	this.health = this._proto.health_max;
 	
-	this.setPosition(pos_x, pos_y);
+	this.init(pos_x, pos_y);
 	this.setActionTime(this._proto.build_time);
 	
 	this.run = function()
@@ -28,10 +28,11 @@ CameraTowerBuilding.res_key = 'camera_tower';
 CameraTowerBuilding.obj_name = 'Camera Tower';
 CameraTowerBuilding.cost = 200;
 CameraTowerBuilding.sell_cost = 100;
-CameraTowerBuilding.health_max = 200;
+CameraTowerBuilding.health_max = 150;
 CameraTowerBuilding.build_time = 4;
 CameraTowerBuilding.energy = 50;
 CameraTowerBuilding.enabled = false;
+CameraTowerBuilding.can_build = true;
 CameraTowerBuilding.count = 0;
 
 CameraTowerBuilding.cell_size = {x: 1, y: 2};
@@ -43,6 +44,7 @@ CameraTowerBuilding.image_padding = {x: 0, y: 0};
 CameraTowerBuilding.require_building = [];
 
 CameraTowerBuilding.upgradable = false;
+CameraTowerBuilding.upgrade_from = null;
 
 CameraTowerBuilding.loadResources = function(){
 	AbstractBuilding.loadResources(this);
