@@ -1,6 +1,8 @@
 Build 24 (02.12.2012)
 - Changed interface cursor
 - Units marked blue on right panel when selected building can't produce that unit
+- Added "Headquarter 2" building
+- Added ability to upgrade buildings
 
 Build 23 (27.11.2012)
 - Added neutral player
